--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,3 +26,7 @@ body{
   @apply bg-gradient-to-r rounded-full from-purple-700 via-blue-800 to-blue-300
    ml-2 mt-1 mb-4 h-0.5 w-7;
 }
+
+.gradient-text{
+  @apply font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-green-600 to-green-800;
+}
