--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 /* Font import */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700');
 @import "./calender.css";
 @import "./profile.css";
 @import "./navbar.css";
@@ -23,8 +23,12 @@ body{
 }
 
 .section-divider{
-  @apply bg-gradient-to-r rounded-full from-purple-700 via-blue-800 to-blue-300
-   ml-2 mt-1 mb-4 h-0.5 w-7;
+  @apply rounded-full gradient
+  mt-1 mb-10 h-1 w-14;
+}
+
+.section-title{
+  @apply text-lg font-bold;
 }
 
 .gradient-text{
