--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,3 +34,11 @@ body{
 .gradient-text{
   @apply font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-green-600 to-green-800;
 }
+
+.flag{
+  @apply border-8 h-28 w-28 rounded-full overflow-hidden relative flex flex-col
+}
+
+.flag p{
+  @apply text-gray-800
+}
