--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,5 +36,10 @@ body{
 }
 
 .flag{
-  @apply border-8 h-28 w-28 rounded-full overflow-hidden relative;
+  @apply border-8 h-28 w-28 rounded-full overflow-hidden relative mx-auto
+  transition-all duration-500 ease-in-out;
+}
+
+.flag.selected{
+  @apply border-green-600;
 }
